--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,12 @@ if(NOT IS_DIRECTORY ${BUILD_DIR})
 	)
 endif()
 
-
 set (EXECUTABLE_OUTPUT_PATH ${BUILD_DIR})
 set (LIBRARY_OUTPUT_PATH ${BUILD_DIR})
 
 add_subdirectory(keycreator/)
+
+set (BOOLCALC_BUILD_AS_PART_OF_PROJECT true)
+add_subdirectory(externals/boolcalc)
 
 enable_testing()
