skeleton of the KeyCreator

--- a/keycreator/lib/CMakeLists.txt
+++ b/keycreator/lib/CMakeLists.txt
@@ -6,12 +6,10 @@ set(SOURCES
 	DecrKeyParams.cpp
 	KeyStream.cpp
 	LFSRParams.cpp
+	KeyCreator.cpp
+	DisForm.cpp
 	../../auxiliary/LFSR.cpp
 	../../auxiliary/Markerator.cpp
-)
-
-set(LIBS
-	boolcalc
 )
 
 find_package(Boost COMPONENTS REQUIRED)
@@ -21,10 +19,6 @@ include_directories(
 	../../externals/boolcalc/include/
 	../../auxiliary/
 )
-
-if(CMAKE_COMPILER_IS_GNUCXX )
-	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++0x)
-endif()
 
 add_library(${PROJECT} ${SOURCES}) 
 target_link_libraries(${PROJECT} ${LIBS})
