--- a/keycreator/tests/CMakeLists.txt
+++ b/keycreator/tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(PROJECT keycreator_tests)
+include (CTest)
 
 find_package(Boost COMPONENTS system unit_test_framework REQUIRED)
 
@@ -22,10 +23,17 @@ include_directories(
 	${CMAKE_CURRENT_SOURCE_DIR}/../../externals/boolcalc/include/
 )
 
+#if(CMAKE_COMPILER_IS_GNUCXX)
+#	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++0x)
+#endif()
+
+
 ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK) 
 
 add_executable (${PROJECT} ${SOURCES})
 target_link_libraries (${PROJECT} ${LIBS} ${Boost_LIBRARIES})
 add_dependencies(${PROJECT} keycreator_lib)
 
+
 add_test (${PROJECT} ${BUILD_DIR}/${PROJECT})
+
