--- a/keycreator/CMakeLists.txt
+++ b/keycreator/CMakeLists.txt
@@ -1,5 +1,5 @@
 if(CMAKE_COMPILER_IS_GNUCXX )
-	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++0x)
+	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++0x")
 endif()
 
 enable_testing()
