--- a/keycreator/tests/CMakeLists.txt
+++ b/keycreator/tests/CMakeLists.txt
@@ -19,7 +19,7 @@ set(LIBS
 
 include_directories(
 	${Boost_INCLUDE_DIRS}
-	${CMAKE_CURRENT_SOURCE_DIR}/../lib
+	${CMAKE_CURRENT_SOURCE_DIR}/../keycreator_lib
 	${CMAKE_CURRENT_SOURCE_DIR}/../../auxiliary
 	${CMAKE_CURRENT_SOURCE_DIR}/../../externals/boolcalc/include/
 )
