--- a/keycreator/tests/CMakeLists.txt
+++ b/keycreator/tests/CMakeLists.txt
@@ -20,7 +20,7 @@ set(LIBS
 include_directories(
 	${Boost_INCLUDE_DIRS}
 	${CMAKE_CURRENT_SOURCE_DIR}/../keycreator_lib
-	${CMAKE_CURRENT_SOURCE_DIR}/../../auxiliary
+	${CMAKE_CURRENT_SOURCE_DIR}/../../common
 	${CMAKE_CURRENT_SOURCE_DIR}/../../externals/boolcalc/include/
 )
 
