added keycreator cli program

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,1 +1,6 @@
+if(CMAKE_COMPILER_IS_GNUCXX )
+	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++0x")
+endif()
+
 add_subdirectory(keyinfo/)
+add_subdirectory(keycreator/)
