--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(CMAKE_COMPILER_IS_GNUCXX )
+	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++0x")
+endif()
+
 enable_testing()
 add_subdirectory(keycreator_lib/)
 add_subdirectory(keyio/)
